# KBridgeProject

./: .gitignore  AGENTS.md  main.py  pyproject.toml
backend/app/: main.py
backend/app/agents/: __init__.py
backend/app/core/: config.py
backend/app/db/: models.py  session.py
backend/app/schemas/: roleplay.py
backend/app/services/: roleplay_ingame_service.py  roleplay_session_service.py  roleplay_session_turn_service.py  roleplay_voice_service.py
backend/rag/: korean_culture_roleplaying_vector_index.json
backend/rag/korean_culture_rag_txt/: 00_README.txt  01_RAG_SCHEMA_TEMPLATE.txt  02_DOCUMENT_INDEX.txt  03_CATEGORY_GUIDE.txt  04_MANIFEST.txt  CULTURE_ADDRESS_FORMAL_OFFICE_001.txt  CULTURE_ADDRESS_HYUNG_BOUNDARY_001.txt  CULTURE_ADDRESS_KINSHIP_RESTAURANT_001.txt  CULTURE_ADDRESS_SAJANGNIM_SERVICE_001.txt  CULTURE_ADDRESS_URI_GROUP_001.txt  CULTURE_HIERARCHY_REQUEST_TO_SUPERIOR_001.txt  CULTURE_HIERARCHY_SERVICE_POLITENESS_001.txt  CULTURE_HIERARCHY_TEACHER_PROFESSOR_001.txt  CULTURE_IMPLICIT_DEICTIC_THIS_THAT_001.txt  CULTURE_IMPLICIT_OBJECT_TASKFLOW_001.txt  CULTURE_INDIRECT_COMFORT_SARCASM_001.txt  CULTURE_INDIRECT_GIVEUP_REBUKE_001.txt  CULTURE_INDIRECT_PERMISSION_PRESSURE_001.txt  (+16 more)
docs/: roleplay-agent-troubleshooting.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
samples/agents/: counseling_analysis.py  matching_recommendation.py  review_analysis.py  sample_chatbot_rag.py  sample_rag.py  sample_rag_roleplaying.py  sample_simple_voice_chatbot.py
samples/db/: __init__.py  models.py  session.py
(+37 files in other folders)
