[project]
name = "kbridgeproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elevenlabs>=2.51.0",
    "google-cloud-speech>=2.40.0",
    "google-genai>=2.8.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]
