[project]
name = "kbridgeproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.0",
    "asyncpg>=0.31.0",
    "elevenlabs>=2.51.0",
    "fastapi>=0.124.0",
    "google-cloud-speech>=2.40.0",
    "google-genai>=2.8.0",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.45",
    "streamlit>=1.58.0",
    "uvicorn>=0.35.0",
    "langgraph>=0.2.0",
]
